# bearable-ml

./: README.md  pyproject.toml
data/: README.md  autogluon_house_prices.csv  neuralprophet_website_traffic.csv  pycaret_churn_data.csv
output/: AutoGluon.txt  FastAI.txt  Hugging-Face.txt  MLflow.txt  NeuralProphet.txt  Optuna.txt  PyCaret.txt
scripts/: agl_tabular_run.py  agl_train_and_rank.py  fastai_image_classifier.py  huggingface_sentiment_analysis.py  mlflow_experiment_tracking.py  my_timer.py  neuralprophet_time_series_forecast.py  optuna_hyperparam_tuning.py  optuna_with_pruner.py  pycaret_algorithm_bakeoff.py  run_mlflow.sh  sanity_check_data.py
